--- a/environment.yml
+++ b/environment.yml
@@ -17,6 +17,7 @@ dependencies:
     - networkx==1.11
     - python-louvain
     - pytest==3.6
+    - simplejson
     - xlrd==1.1
     - git+https://github.com/tonysyu/mpltools
 # then get the following file (no setup.py available)
