--- a/environment.yml
+++ b/environment.yml
@@ -7,16 +7,17 @@ dependencies:
   - metis
   - numpy
   - pandas
-  - scikit-learn
+  - scikit-learn==0.19.2
   - scipy
-  - seaborn
   - statsmodels
+  - pip
   - pip:
-    - matplotlib==1.4
+    - matplotlib==1.3.1
     - metis==0.2a1
     - networkx==1.11
     - python-louvain
     - pytest==3.6
+    - seaborn==0.8.1
     - simplejson
     - xlrd==1.1
     - git+https://github.com/tonysyu/mpltools
