--- a/environment.yml
+++ b/environment.yml
@@ -15,6 +15,7 @@ dependencies:
     - matplotlib==1.3.1
     - metis==0.2a1
     - networkx==1.11
+    - openpyxl==2.5.14
     - python-louvain
     - pytest==3.6
     - seaborn==0.8.1
