--- a/environment.yml
+++ b/environment.yml
@@ -7,17 +7,20 @@ dependencies:
   - metis
   - numpy
   - pandas
+  - pytest=3.6
   - scikit-learn==0.19.2
   - scipy
   - statsmodels
   - pip
   - pip:
+    - ipython
     - matplotlib==1.3.1
+    - mca==1.0
     - metis==0.2a1
+    - multiprocess
     - networkx==1.11
     - openpyxl==2.5.14
     - python-louvain
-    - pytest==3.6
     - seaborn==0.8.1
     - simplejson
     - xlrd==1.1
