--- a/environment.yml
+++ b/environment.yml
@@ -1,36 +1,30 @@
-name: fine-py2
+name: fine-py3
 channels:
   - conda-forge
 dependencies:
-  - python=2.7
-  - astroML=0.4.1
-  - metis
+  - python>=3.9
+  - matplotlib
   - numpy
-  - pandas
-  - pytest=3.6
-  - scikit-learn==0.19.2
   - scipy
+  - cython
+  - mkl
+  - mkl-service
+  - pymc3
+  - astropy
+  - astroML
+  - scikit-learn
+  - pandas
+  - metis
   - statsmodels
   - pip
   - pip:
-    - ipython
-    - matplotlib==1.3.1
-    - mca==1.0
-    - metis==0.2a1
-    - multiprocess
-    - networkx==1.11
-    - openpyxl==2.5.14
+    - openpyxl
+    - metis
+    - mpltools
+    - networkx
     - python-louvain
-    - seaborn==0.8.1
+    - pytest
+    - seaborn
     - simplejson
-    - xlrd==1.1
-    - git+https://github.com/tonysyu/mpltools
-# then get the following file (no setup.py available)
+# then get the following file (no setup.py available) These are currently only py2 need to foark and convvert if desired
 # wget https://raw.githubusercontent.com/jbkinney/13_deft/master/deft.py
-
-
-
-
-
-
-
