--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,19 @@
 [metadata]
-description-file = README.md
+description_file = README.md
+
+[options]
+packages = find:
+install_requires =
+
+[options.extras_require]
+dev =
+    pre-commit
+    black
+    coverage[toml]
+    prospector[with_pyroma]
+    isort
+    pytest
+    pytest-cov
 
 [coverage:run]
 branch = True
